tests/fixtures/LatestTests/VariableDeclarationTests/errors/int_to_bool.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:bool = 5

